At least, you had better search '[INCOMPATIBLE CHANGES]' for each version.

Current version - **** ** ****, by Shigio Yamaguchi

* htags: -m(--main-func) option added.
* htags: --style-sheet=<style file> option added.
* htags: --no-javascript option and no_javascript config variable added.
* htags: -g(--gtags) option added.
* htags: -s(--symbols) option added.
* gctags: --langmap option added.
* gtags: pick up macros without argument.
* gozilla: -d option added.
* gctags: assumes __attribute__, const, volatile, wchar_t as a reserved word
  in C language. assumes __attribute__, explicit, mutable, namespace,
  overload, typename, using as a reserved word in C++ language.

Version 4.4 - March 30 2002, by Shigio Yamaguchi

* gozilla: gozilla return to GLOBAL.
* htags: -o(--other) option added. This option list not only source files
  but also other files like 'README'.
* global: -o(--other) option added. This option search in not only source
  files but also other files like 'README'.
* htags: configuration variable other_files added.
* htags: configuration variable definition_header={no|after|before} added.
* htags: configuration variable enable_grep and enable_idutils added.
* htags: -l(--each-line-tag) option deleted.
  From now on, htags works as if -l flag is always specified.
  But -l(--each-line-tag) option is accepted for backward compatibility.
* global: path conversion optimized and bug fixed.
* gtags.conf: added documentation about variables.
* htags: shut another security hole.
* Some bugs are fixed.

Version 4.3.1 - January 22 2002, by Shigio Yamaguchi

This is bug fix version.
* htags: global.cgi wasn't generated correctly.

Version 4.3 - January 10 2002, by Shigio Yamaguchi

* Support DJGPP.
* Support nvi-1.81.5.
* global.texi: chapter of less viewer, nvi-1.81.5 and reference manuals added.
* global,gtags: the -q option added.
* htags: fill anchors into path name.
* global: GTAGSROOT file supported.

Version 4.2 - November 24 2001, by Shigio Yamaguchi
